# LCARS-at-Home

./: .gitignore  CLAUDE.md  README.md  lcars_guide.py  pyproject.toml
.github/: copilot-instructions.md
docker/: docker-compose.desktop.yml  docker-compose.yml
docs/: ADVANCED.md  ARTIFACTS.md  CHECKLISTS.md  CODEBASE_REVIEW.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CUSTOM_DEPLOYMENT.md  CUSTOM_DEPLOYMENT_QUICK_REFERENCE.md  CUSTOM_DEPLOYMENT_UX_ANALYSIS.md  CUSTOM_DEPLOYMENT_UX_IMPROVEMENTS.md  DEPLOYMENT_TAB_UPDATES.md  DOCKER_INSTALL.md  ESPHOME_SATELLITE_SETUP.md  EXTENDED_OPENAI_SETUP.md  FORM_EDITABLE_FIELDS_FIX.md  HACS_SETUP.md  HAVPE_ESPHOME_CONFIG.md  HOSTNAME_FIELD_FIX.md  IMPLEMENTATION_SUMMARY_FINAL.md  IMPROVEMENT_PLAN.md  INSTALLATION_CLEANUP.md  N8N_WORKFLOW_IMPORT.md  NETWORKING.md  OPS_RUNBOOK.md  SECURITY_HARDENING.md  STREAMLIT_IMPROVEMENTS.md  TURNKEY_IMPLEMENTATION_COMPLETE.md  UX_IMPROVEMENTS_SUMMARY.md  VALIDATION_REPORT.md
esphome/: home_assistant_voice_pe_SINGLE.yaml  home_assistant_voice_pe_kitchen.yaml  home_assistant_voice_pe_living_room.yaml  voice_satellite_atom.yaml  voice_satellite_s3box.yaml
homeassistant/config/: automations.yaml  configuration.yaml  customize.yaml  extended_openai.yaml  groups.yaml  scenes.yaml  scripts.yaml
lcars_computer/: cli.py
n8n/workflows/: deep_research_agent.json  red_alert_protocol.json  status_report.json  voice_command_handler.json
prompts/: lcars_persona.txt  tool_definitions.yaml
scripts/: backup.py  deploy.sh  deploy_config.py  health_check.py  setup.py  update.sh  view_extended_openai_config.py
(+2 files in other folders)
